--- a/index.html
+++ b/index.html
@@ -1191,7 +1191,7 @@
                 <div class="container d_flex m_column">
                     <div class="main_title_block md m_d_flex align_end" data-aos="fade-up">
                         <h4 class="title">에그스쿨 <span class="font_yellow">새소식</span></h4>
-                        <span class="underline"><a href="/community/notice">MORE VIEW +</a></span>
+                        <span class="underline"><a href="./community/notice.html">MORE VIEW +</a></span>
                     </div>
                     <div class="notice_block" data-aos="fade-up">
                         <article class="notice_item">
