--- a/studyroom/guide/element.html
+++ b/studyroom/guide/element.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
-    <link rel="stylesheet" href="././../css/reset.css">
+    <link rel="stylesheet" href="./../css/reset.css">
     <!--S: Swiper CDN-->
     <link
             rel="stylesheet"
@@ -25,14 +25,14 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!--E:fonts-->
-    <link rel="stylesheet" href="././../css/common.css">
+    <link rel="stylesheet" href="./../css/common.css">
 <!--    <link rel="stylesheet" href="/css/main.css">-->
-    <link rel="stylesheet" href="././../css/modal.css">
-    <link rel="stylesheet" href="././../css/product.css">
-    <link rel="stylesheet" href="././../css/guide.css">
-    <script src="././../js/modal.js"></script>
-    <script src="././../js/common.js"></script>
-    <script src="././../js/product.js"></script>
+    <link rel="stylesheet" href="./../css/modal.css">
+    <link rel="stylesheet" href="./../css/product.css">
+    <link rel="stylesheet" href="./../css/guide.css">
+    <script src="./../js/modal.js"></script>
+    <script src="./../js/common.js"></script>
+    <script src="./../js/product.js"></script>
 </head>
 <body>
 <div class="wrapper">
@@ -50,23 +50,23 @@
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Product</span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../product/kinder.html">유치원</a></li>
-                        <li class="lnb_link"><a href="../../product/element.html">초등</a></li>
-                        <li class="lnb_link"><a href="../../product/library.html">도서관</a></li>
-                        <li class="lnb_link"><a href="../../product/freetrial/kinder.html">무료체험신청</a></li>
+                        <li class="lnb_link"><a href="./../product/kinder.html">유치원</a></li>
+                        <li class="lnb_link"><a href="./../product/element.html">초등</a></li>
+                        <li class="lnb_link"><a href="./../product/library.html">도서관</a></li>
+                        <li class="lnb_link"><a href="./../product/freetrial/kinder.html">무료체험신청</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Study Room</span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../studyroom/guide/kinder.html">학습가이드</a></li>
-                        <li class="lnb_link"><a href="../../studyroom/guide/remotesupport.html">PC원격지원</a></li>
+                        <li class="lnb_link"><a href="./../studyroom/guide/kinder.html">학습가이드</a></li>
+                        <li class="lnb_link"><a href="./../studyroom/guide/remotesupport.html">PC원격지원</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Community</span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../community/notice.html">공지사항</a></li>
-                        <li class="lnb_link"><a href="../../community/event.html">이벤트</a></li>
-                        <li class="lnb_link"><a href="../../community/faq.html">FAQ</a></li>
+                        <li class="lnb_link"><a href="./../community/notice.html">공지사항</a></li>
+                        <li class="lnb_link"><a href="./../community/event.html">이벤트</a></li>
+                        <li class="lnb_link"><a href="./../community/faq.html">FAQ</a></li>
                     </ul>
                 </li>
             </ul>
@@ -76,13 +76,13 @@
             <button type="button" class="utill_menu" onclick="toggleMySchool()">My School
                 <ul class="mypage_link_block">
                     <li class="mypage_link logout">로그아웃</li>
-                    <li class="mypage_link"><a href="../../myschool/userinfo.html">회원정보</a></li>
-                    <li class="mypage_link"><a href="../../myschool/studyinfo.html">학습정보</a></li>
-                    <li class="mypage_link"><a href="../../myschool/appextend.html">앱 구독연장</a></li>
-                    <li class="mypage_link"><a href="../../myschool/paylist.html">결제내역</a></li>
-                    <li class="mypage_link"><a href="../../myschool/delivery.html">배송내역</a></li>
-                    <li class="mypage_link"><a href="../../myschool/dataroom.html">자료실</a></li>
-                    <li class="mypage_link"><a href="../../myschool/qna.html">1 : 1 문의내역</a></li>
+                    <li class="mypage_link"><a href="./../myschool/userinfo.html">회원정보</a></li>
+                    <li class="mypage_link"><a href="./../myschool/studyinfo.html">학습정보</a></li>
+                    <li class="mypage_link"><a href="./../myschool/appextend.html">앱 구독연장</a></li>
+                    <li class="mypage_link"><a href="./../myschool/paylist.html">결제내역</a></li>
+                    <li class="mypage_link"><a href="./../myschool/delivery.html">배송내역</a></li>
+                    <li class="mypage_link"><a href="./../myschool/dataroom.html">자료실</a></li>
+                    <li class="mypage_link"><a href="./../myschool/qna.html">1 : 1 문의내역</a></li>
                 </ul>
             </button>
         </div>
@@ -105,8 +105,8 @@
     <div class="m_nav_wrapper">
         <div class="nav_top d_flex align_center">
             <div class="login_block">
-                <img class="logo" src="../../images/logo.png" alt="Egg School">
-                <p class="login_txt"><a href="../../login" class="font_600">로그인</a>해주세요</p>
+                <img class="logo" src="./../images/logo.png" alt="Egg School">
+                <p class="login_txt"><a href="./../login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
                 <span></span>
@@ -119,41 +119,41 @@
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../eggshool/story.html">회사소개</a></li>
-                        <li class="lnb_link"><a href="../../eggshool/system.html">시스템</a></li>
-                        <li class="lnb_link"><a href="../../eggshool/curriculum.html">커리큘럼</a></li>
+                        <li class="lnb_link"><a href="./../eggshool/story.html">회사소개</a></li>
+                        <li class="lnb_link"><a href="./../eggshool/system.html">시스템</a></li>
+                        <li class="lnb_link"><a href="./../eggshool/curriculum.html">커리큘럼</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Product <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../product/kinder.html">유치원</a></li>
-                        <li class="lnb_link"><a href="../../product/element.html">초등</a></li>
-                        <li class="lnb_link"><a href="../../product/library.html">도서관</a></li>
-                        <li class="lnb_link"><a href="../../product/freetrial.html">무료체험신청</a></li>
+                        <li class="lnb_link"><a href="./../product/kinder.html">유치원</a></li>
+                        <li class="lnb_link"><a href="./../product/element.html">초등</a></li>
+                        <li class="lnb_link"><a href="./../product/library.html">도서관</a></li>
+                        <li class="lnb_link"><a href="./../product/freetrial/kinder.html">무료체험신청</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Study Room <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../studyroom/guide.html">학습가이드</a></li>
-                        <li class="lnb_link"><a href="../../studyroom/guide/remotesupport.html">PC원격지원</a></li>
+                        <li class="lnb_link"><a href="./../studyroom/guide.html">학습가이드</a></li>
+                        <li class="lnb_link"><a href="./../studyroom/guide/remotesupport.html">PC원격지원</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Community <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../community/notice.html">공지사항</a></li>
-                        <li class="lnb_link"><a href="../../community/event.html">이벤트</a></li>
-                        <li class="lnb_link"><a href="../../community/faq.html">FAQ</a></li>
+                        <li class="lnb_link"><a href="./../community/notice.html">공지사항</a></li>
+                        <li class="lnb_link"><a href="./../community/event.html">이벤트</a></li>
+                        <li class="lnb_link"><a href="./../community/faq.html">FAQ</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">My School <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../myschool/userinfo.html">회원정보</a></li>
-                        <li class="lnb_link"><a href="../../myschool/studyinfo.html">학습정보</a></li>
-                        <li class="lnb_link"><a href="../../myschool/appextend.html">앱 구독연장</a></li>
-                        <li class="lnb_link"><a href="../../myschool/paylist.html">결제내역</a></li>
-                        <li class="lnb_link"><a href="../../myschool/delivery.html">배송내역</a></li>
-                        <li class="lnb_link"><a href="../../myschool/dataroom.html">자료실</a></li>
-                        <li class="lnb_link"><a href="../../myschool/qna.html">1:1 문의내역</a></li>
+                        <li class="lnb_link"><a href="./../myschool/userinfo.html">회원정보</a></li>
+                        <li class="lnb_link"><a href="./../myschool/studyinfo.html">학습정보</a></li>
+                        <li class="lnb_link"><a href="./../myschool/appextend.html">앱 구독연장</a></li>
+                        <li class="lnb_link"><a href="./../myschool/paylist.html">결제내역</a></li>
+                        <li class="lnb_link"><a href="./../myschool/delivery.html">배송내역</a></li>
+                        <li class="lnb_link"><a href="./../myschool/dataroom.html">자료실</a></li>
+                        <li class="lnb_link"><a href="./../myschool/qna.html">1:1 문의내역</a></li>
                     </ul>
                 </li>
             </ul>
