--- a/studyroom/guide/kinder.html
+++ b/studyroom/guide/kinder.html
@@ -129,7 +129,7 @@
                         <li class="lnb_link"><a href="./../product/kinder.html">유치원</a></li>
                         <li class="lnb_link"><a href="./../product/element.html">초등</a></li>
                         <li class="lnb_link"><a href="./../product/library.html">도서관</a></li>
-                        <li class="lnb_link"><a href="./../product/freetrial.html">무료체험신청</a></li>
+                        <li class="lnb_link"><a href="./../product/freetrial/kinder.html">무료체험신청</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Study Room <i class="ico_arrow"></i></span>
