--- a/product/freetrial/kinder.html
+++ b/product/freetrial/kinder.html
@@ -36,36 +36,36 @@
 <body>
 <div class="wrapper">
     <!--S:header-->
-    <header class="header font_black">
-        <a href="./../../"><img src="./../images/logo.png" alt="Egg School"></a>
+    <header class="header">
+        <a href="./../../"><img src="./../../images/logo.png" alt="Egg School"></a>
         <nav class="gnb_wrapper">
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School</span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="./../../eggshool/story">회사소개</a></li>
-                        <li class="lnb_link"><a href="./../../eggshool/system">시스템</a></li>
-                        <li class="lnb_link"><a href="./../../eggshool/curriculum">커리큘럼</a></li>
+                        <li class="lnb_link"><a href="./../../eggshool/story.html">회사소개</a></li>
+                        <li class="lnb_link"><a href="./../../eggshool/system.html">시스템</a></li>
+                        <li class="lnb_link"><a href="./../../eggshool/curriculum.html">커리큘럼</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Product</span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="./../../product/kinder">유치원</a></li>
-                        <li class="lnb_link"><a href="./../../product/element">초등</a></li>
-                        <li class="lnb_link"><a href="./../../product/library">도서관</a></li>
-                        <li class="lnb_link"><a href="./../../product/freetrial">무료체험신청</a></li>
+                        <li class="lnb_link"><a href="./../../product/kinder.html">유치원</a></li>
+                        <li class="lnb_link"><a href="./../../product/element.html">초등</a></li>
+                        <li class="lnb_link"><a href="./../../product/library.html">도서관</a></li>
+                        <li class="lnb_link"><a href="./../../product/freetrial/kinder.html">무료체험신청</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Study Room</span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="./../../studyroom/guide">학습가이드</a></li>
-                        <li class="lnb_link"><a href="./../../studyroom/guide/remotesupport">PC원격지원</a></li>
+                        <li class="lnb_link"><a href="./../../studyroom/guide/kinder.html">학습가이드</a></li>
+                        <li class="lnb_link"><a href="./../../studyroom/guide/remotesupport.html">PC원격지원</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Community</span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="./../../community/notice">공지사항</a></li>
-                        <li class="lnb_link"><a href="./../../community/event">이벤트</a></li>
-                        <li class="lnb_link"><a href="./../../community/faq">FAQ</a></li>
+                        <li class="lnb_link"><a href="./../community/notice.html">공지사항</a></li>
+                        <li class="lnb_link"><a href="./../community/event.html">이벤트</a></li>
+                        <li class="lnb_link"><a href="./../community/faq.html">FAQ</a></li>
                     </ul>
                 </li>
             </ul>
@@ -75,20 +75,20 @@
             <button type="button" class="utill_menu" onclick="toggleMySchool()">My School
                 <ul class="mypage_link_block">
                     <li class="mypage_link logout">로그아웃</li>
-                    <li class="mypage_link"><a href="./../../myschool/userinfo">회원정보</a></li>
-                    <li class="mypage_link"><a href="./../../myschool/studyinfo">학습정보</a></li>
-                    <li class="mypage_link"><a href="./../../myschool/appextend">앱 구독연장</a></li>
-                    <li class="mypage_link"><a href="./../../myschool/paylist">결제내역</a></li>
-                    <li class="mypage_link"><a href="./../../myschool/delivery">배송내역</a></li>
-                    <li class="mypage_link"><a href="./../../myschool/dataroom">자료실</a></li>
-                    <li class="mypage_link"><a href="./../../myschool/qna">1:1 문의내역</a></li>
+                    <li class="mypage_link"><a href="./../../myschool/userinfo.html">회원정보</a></li>
+                    <li class="mypage_link"><a href="./../../myschool/studyinfo.html">학습정보</a></li>
+                    <li class="mypage_link"><a href="./../../myschool/appextend.html">앱 구독연장</a></li>
+                    <li class="mypage_link"><a href="./../../myschool/paylist.html">결제내역</a></li>
+                    <li class="mypage_link"><a href="./../../myschool/delivery.html">배송내역</a></li>
+                    <li class="mypage_link"><a href="./../../myschool/dataroom.html">자료실</a></li>
+                    <li class="mypage_link"><a href="./../../myschool/qna.html">1 : 1 문의내역</a></li>
                 </ul>
             </button>
         </div>
     </header>
     <!--S:mobile-->
-    <header class="m_header font_black">
-        <div class="logo"><a href="./../../"><img src="./../images/logo.png" alt="Egg School"></a></div>
+    <header class="m_header">
+        <div class="logo"><a href="/"><img src="./../images/logo.png" alt="Egg School"></a></div>
         <div class="m_menu_block">
             <div class="utill_menu_block">
                 <button type="button" onclick="redirectToAppStore()" class="utill_menu">앱 다운로드</button>
@@ -105,7 +105,7 @@
         <div class="nav_top d_flex align_center">
             <div class="login_block">
                 <img class="logo" src="./../images/logo.png" alt="Egg School">
-                <p class="login_txt"><a href="./../../login" class="font_600">로그인</a>해주세요</p>
+                <p class="login_txt"><a href="./../login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
                 <span></span>
@@ -118,41 +118,41 @@
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="./../../eggshool/story">회사소개</a></li>
-                        <li class="lnb_link"><a href="./../../eggshool/system">시스템</a></li>
-                        <li class="lnb_link"><a href="./../../eggshool/curriculum">커리큘럼</a></li>
+                        <li class="lnb_link"><a href="./../../eggshool/story.html">회사소개</a></li>
+                        <li class="lnb_link"><a href="./../../eggshool/system.html">시스템</a></li>
+                        <li class="lnb_link"><a href="./../../eggshool/curriculum.html">커리큘럼</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Product <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="./../../product/kinder">유치원</a></li>
-                        <li class="lnb_link"><a href="./../../product/element">초등</a></li>
-                        <li class="lnb_link"><a href="./../../product/library">도서관</a></li>
-                        <li class="lnb_link"><a href="./../../product/freetrial">무료체험신청</a></li>
+                        <li class="lnb_link"><a href="./../../product/kinder.html">유치원</a></li>
+                        <li class="lnb_link"><a href="./../../product/element.html">초등</a></li>
+                        <li class="lnb_link"><a href="./../../product/library.html">도서관</a></li>
+                        <li class="lnb_link"><a href="./../../product/freetrial/kinder.html">무료체험신청</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Study Room <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="./../../studyroom/guide">학습가이드</a></li>
-                        <li class="lnb_link"><a href="./../../studyroom/guide/remotesupport">PC원격지원</a></li>
+                        <li class="lnb_link"><a href="./../../studyroom/guide.html">학습가이드</a></li>
+                        <li class="lnb_link"><a href="./../../studyroom/guide/remotesupport.html">PC원격지원</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Community <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="./../../community/notice">공지사항</a></li>
-                        <li class="lnb_link"><a href="/community/event">이벤트</a></li>
-                        <li class="lnb_link"><a href="/community/faq">FAQ</a></li>
+                        <li class="lnb_link"><a href="./../../community/notice.html">공지사항</a></li>
+                        <li class="lnb_link"><a href="./../../community/event.html">이벤트</a></li>
+                        <li class="lnb_link"><a href="./../../community/faq.html">FAQ</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">My School <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="/myschool/userinfo">회원정보</a></li>
-                        <li class="lnb_link"><a href="/myschool/studyinfo">학습정보</a></li>
-                        <li class="lnb_link"><a href="/myschool/appextend">앱 구독연장</a></li>
-                        <li class="lnb_link"><a href="/myschool/paylist">결제내역</a></li>
-                        <li class="lnb_link"><a href="/myschool/delivery">배송내역</a></li>
-                        <li class="lnb_link"><a href="/myschool/dataroom">자료실</a></li>
-                        <li class="lnb_link"><a href="/myschool/qna">1:1 문의내역</a></li>
+                        <li class="lnb_link"><a href="./../../myschool/userinfo.html">회원정보</a></li>
+                        <li class="lnb_link"><a href="./../../myschool/studyinfo.html">학습정보</a></li>
+                        <li class="lnb_link"><a href="./../../myschool/appextend.html">앱 구독연장</a></li>
+                        <li class="lnb_link"><a href="./../../myschool/paylist.html">결제내역</a></li>
+                        <li class="lnb_link"><a href="./../../myschool/delivery.html">배송내역</a></li>
+                        <li class="lnb_link"><a href="./../../myschool/dataroom.html">자료실</a></li>
+                        <li class="lnb_link"><a href="./../../myschool/qna.html">1:1 문의내역</a></li>
                     </ul>
                 </li>
             </ul>
