--- a/product/library.html
+++ b/product/library.html
@@ -52,22 +52,22 @@
                 <li class="gnb_link"><span class="gnb_text">Product</span>
                     <ul class="lnb_block">
                         <li class="lnb_link"><a href="./../product/kinder.html">유치원</a></li>
-                        <li class="lnb_link"><a href="../../product/element.html">초등</a></li>
-                        <li class="lnb_link"><a href="../../product/library.html">도서관</a></li>
-                        <li class="lnb_link"><a href="../../product/freetrial/kinder.html">무료체험신청</a></li>
+                        <li class="lnb_link"><a href="./../product/element.html">초등</a></li>
+                        <li class="lnb_link"><a href="./../product/library.html">도서관</a></li>
+                        <li class="lnb_link"><a href="./../product/freetrial/kinder.html">무료체험신청</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Study Room</span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../studyroom/guide/kinder.html">학습가이드</a></li>
-                        <li class="lnb_link"><a href="../../studyroom/guide/remotesupport.html">PC원격지원</a></li>
+                        <li class="lnb_link"><a href="./../studyroom/guide/kinder.html">학습가이드</a></li>
+                        <li class="lnb_link"><a href="./../studyroom/guide/remotesupport.html">PC원격지원</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Community</span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../community/notice.html">공지사항</a></li>
-                        <li class="lnb_link"><a href="../../community/event.html">이벤트</a></li>
-                        <li class="lnb_link"><a href="../../community/faq.html">FAQ</a></li>
+                        <li class="lnb_link"><a href="./../community/notice.html">공지사항</a></li>
+                        <li class="lnb_link"><a href="./../community/event.html">이벤트</a></li>
+                        <li class="lnb_link"><a href="./../community/faq.html">FAQ</a></li>
                     </ul>
                 </li>
             </ul>
@@ -77,13 +77,13 @@
             <button type="button" class="utill_menu" onclick="toggleMySchool()">My School
                 <ul class="mypage_link_block">
                     <li class="mypage_link logout">로그아웃</li>
-                    <li class="mypage_link"><a href="../../myschool/userinfo.html">회원정보</a></li>
-                    <li class="mypage_link"><a href="../../myschool/studyinfo.html">학습정보</a></li>
-                    <li class="mypage_link"><a href="../../myschool/appextend.html">앱 구독연장</a></li>
-                    <li class="mypage_link"><a href="../../myschool/paylist.html">결제내역</a></li>
-                    <li class="mypage_link"><a href="../../myschool/delivery.html">배송내역</a></li>
-                    <li class="mypage_link"><a href="../../myschool/dataroom.html">자료실</a></li>
-                    <li class="mypage_link"><a href="../../myschool/qna.html">1 : 1 문의내역</a></li>
+                    <li class="mypage_link"><a href="./../myschool/userinfo.html">회원정보</a></li>
+                    <li class="mypage_link"><a href="./../myschool/studyinfo.html">학습정보</a></li>
+                    <li class="mypage_link"><a href="./../myschool/appextend.html">앱 구독연장</a></li>
+                    <li class="mypage_link"><a href="./../myschool/paylist.html">결제내역</a></li>
+                    <li class="mypage_link"><a href="./../myschool/delivery.html">배송내역</a></li>
+                    <li class="mypage_link"><a href="./../myschool/dataroom.html">자료실</a></li>
+                    <li class="mypage_link"><a href="./../myschool/qna.html">1 : 1 문의내역</a></li>
                 </ul>
             </button>
         </div>
@@ -106,8 +106,8 @@
     <div class="m_nav_wrapper">
         <div class="nav_top d_flex align_center">
             <div class="login_block">
-                <img class="logo" src="../../images/logo.png" alt="Egg School">
-                <p class="login_txt"><a href="../../login" class="font_600">로그인</a>해주세요</p>
+                <img class="logo" src="./../images/logo.png" alt="Egg School">
+                <p class="login_txt"><a href="./../login" class="font_600">로그인</a>해주세요</p>
             </div>
             <button class="btn_nav open" onclick="handleMobileNav(this)">
                 <span></span>
@@ -120,41 +120,41 @@
             <ul class="gnb_block">
                 <li class="gnb_link"><span class="gnb_text">Egg School <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../eggshool/story.html">회사소개</a></li>
-                        <li class="lnb_link"><a href="../../eggshool/system.html">시스템</a></li>
-                        <li class="lnb_link"><a href="../../eggshool/curriculum.html">커리큘럼</a></li>
+                        <li class="lnb_link"><a href="./../eggshool/story.html">회사소개</a></li>
+                        <li class="lnb_link"><a href="./../eggshool/system.html">시스템</a></li>
+                        <li class="lnb_link"><a href="./../eggshool/curriculum.html">커리큘럼</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Product <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../product/kinder.html">유치원</a></li>
-                        <li class="lnb_link"><a href="../../product/element.html">초등</a></li>
-                        <li class="lnb_link"><a href="../../product/library.html">도서관</a></li>
-                        <li class="lnb_link"><a href="../../product/freetrial.html">무료체험신청</a></li>
+                        <li class="lnb_link"><a href="./../product/kinder.html">유치원</a></li>
+                        <li class="lnb_link"><a href="./../product/element.html">초등</a></li>
+                        <li class="lnb_link"><a href="./../product/library.html">도서관</a></li>
+                        <li class="lnb_link"><a href="./../product/freetrial/kinder.html">무료체험신청</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Study Room <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../studyroom/guide.html">학습가이드</a></li>
-                        <li class="lnb_link"><a href="../../studyroom/guide/remotesupport.html">PC원격지원</a></li>
+                        <li class="lnb_link"><a href="./../studyroom/guide.html">학습가이드</a></li>
+                        <li class="lnb_link"><a href="./../studyroom/guide/remotesupport.html">PC원격지원</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">Community <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../community/notice.html">공지사항</a></li>
-                        <li class="lnb_link"><a href="../../community/event.html">이벤트</a></li>
-                        <li class="lnb_link"><a href="../../community/faq.html">FAQ</a></li>
+                        <li class="lnb_link"><a href="./../community/notice.html">공지사항</a></li>
+                        <li class="lnb_link"><a href="./../community/event.html">이벤트</a></li>
+                        <li class="lnb_link"><a href="./../community/faq.html">FAQ</a></li>
                     </ul>
                 </li>
                 <li class="gnb_link"><span class="gnb_text">My School <i class="ico_arrow"></i></span>
                     <ul class="lnb_block">
-                        <li class="lnb_link"><a href="../../myschool/userinfo.html">회원정보</a></li>
-                        <li class="lnb_link"><a href="../../myschool/studyinfo.html">학습정보</a></li>
-                        <li class="lnb_link"><a href="../../myschool/appextend.html">앱 구독연장</a></li>
-                        <li class="lnb_link"><a href="../../myschool/paylist.html">결제내역</a></li>
-                        <li class="lnb_link"><a href="../../myschool/delivery.html">배송내역</a></li>
-                        <li class="lnb_link"><a href="../../myschool/dataroom.html">자료실</a></li>
-                        <li class="lnb_link"><a href="../../myschool/qna.html">1:1 문의내역</a></li>
+                        <li class="lnb_link"><a href="./../myschool/userinfo.html">회원정보</a></li>
+                        <li class="lnb_link"><a href="./../myschool/studyinfo.html">학습정보</a></li>
+                        <li class="lnb_link"><a href="./../myschool/appextend.html">앱 구독연장</a></li>
+                        <li class="lnb_link"><a href="./../myschool/paylist.html">결제내역</a></li>
+                        <li class="lnb_link"><a href="./../myschool/delivery.html">배송내역</a></li>
+                        <li class="lnb_link"><a href="./../myschool/dataroom.html">자료실</a></li>
+                        <li class="lnb_link"><a href="./../myschool/qna.html">1:1 문의내역</a></li>
                     </ul>
                 </li>
             </ul>
